# rest_api_synthesis

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.txt  annotation.json  bench.py  config.json  config_full.json  config_keys.py  config_large.json  consts.py  download_experiment_data.py  globs.py  model.ilp  requirements.txt  run.py  run_test.py  setup.py  slack_benchmark.json  slack_config.json  slack_web_openapi_small.json  slack_web_openapi_small_preprocess.json  slack_web_openapi_v2.json  slack_web_openapi_v2_micro.json  slack_web_openapi_v2_preprocess.json  stripe_config.json  stripe_spec3_sdk_small.json  table1.tex  table2.tex
.cargo/: config
.github/: dependabot.yml
analyzer/: analyzer.py  ascription.py  dynamic.py  entry.py  parser.py  utils.py
analyzer/openapi/: preprocess.py  request.py
analyzer/traces/: analyzer.py  log.py  parser.py  typeChecker.py
apiphany/: bench.py  config_large.json  consts.py  globs.py  initial_witness_only.result  popular_places.result  rank_uncovered.result  rank_with_paths.result  run.py  run_coverages.sh
apiphany/analyzer/: analyzer.py  ascription.py  consts.py  dynamic.py  entry.py  parser.py  (+2 more)
apiphany_re/: Cargo.toml  TODO.txt
apiphany_re/src/: execute.rs  expr.rs  interop.rs  lib.rs  trace.rs
benchmarks/: benchmark.py  benchmarks.py  github_benchmark.json  slack_benchmark.json  square_benchmark.json  square_benchmarks.json  stripe_benchmark.json  utils.py
configs/: github_annotation.json  github_config.json  slack_annotation.json  slack_config.json  square_annotation.json  square_config.json  stripe_annotation.json  stripe_config.json
data/: slack_web_openapi_v2_small_preprocess.json  solutions.pkl  traces_update_bk.pkl
fuzzer/: dependencies.py  error.py  fuzzer.py  request.py
openapi/: defs.py  entry.py  parser.py  preprocess.py  request.py  utils.py
output/: dependencies.gv
program/: generator.py  program.py  program_equality.py  utils.py
rust_re/: expr.rs  trace.rs
schemas/: schema_type.py  types.py  utils.py
src/: execute.rs  expr.rs  interop.rs  lib.rs  trace.rs  value.rs
stats/: graph_stats.py  time_stats.py
synthesizer/: constructor.py  encoder.py  filtering.py  hypergraph_encoder.py  ilp_encoder.py  parallel.py  petrinet_encoder.py  stats.py  synthesizer.py  underapprox.py  utils.py
test/: test_encoder.py
tests/: run_test.py  test_analyzer.py  test_encoder.py  test_generator.py  test_parser.py  test_runner.py  test_synthesizer.py
traces/: analyzer.py  log.py  parser.py  type.py  typeChecker.py
types/: type.py
webapp/: package.json
witnesses/: dependencies.py  engine.py  request.py  utils.py
(+97 files in other folders)
