[package]
name = "apiphany"
version = "0.1.0"
edition = "2018"
authors = ["David Cao <david@cao.sh>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
mimalloc = { version = "0.1.26", default-features = false }
lasso = { version = "0.5.1", features = ["multi-threaded", "ahasher"] }
nanorand = "0.5.2"
rayon = "1.5.1"
serde_json = "1.0.59"
smallvec = { version = "1.6.1", features = ["union"] }

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "apiphany"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"