[package]
name = "apiphany"
version = "0.1.0"
edition = "2018"
authors = ["David Cao <david@cao.sh>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.0"
mimalloc = { version = "0.1.26", default-features = false }
lasso = { version = "0.7.2", features = ["multi-threaded", "ahasher"] }
nanorand = "0.7.0"
rand = "0.8.4"
rayon = "1.5.1"
serde_json = "1.0.59"
smallvec = { version = "1.6.1", features = ["union"] }

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]

[lib]
name = "apiphany"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"